@@ -2,11 +2,6 @@ git-annex now does Windows!
 
 * First, [install Git for Windows](http://git-scm.com/downloads)
 
-  Important: **Get the 32 bit version not the 64 bit version.**  
-  If you installed the 64 bit version of git, then parts of git-annex will
-  still run, however, some features, including tools like rsync, will
-  not work.
-
 * Then, [install git-annex](https://downloads.kitenet.net/git-annex/windows/current/)
 
 This port is now in reasonably good shape for command-line use of
@@ -31,12 +26,6 @@ Dartmouth College.
 To build git-annex from source on Windows, you need to install
 [Git for Windows](http://git-scm.com/downloads), and
 [Stack](http://haskellstack.org/).
-
-You also need to install rsync for windows.
-It needs to be linked with the same MINGW32 libraries that come with Git
-for Windows. One way is to download it from
-<https://downloads.kitenet.net/git-annex/windows/assets/>.
-Put it somewhere in PATH.
 
 Then open Git Bash, [[clone git-annex|download]], and in git-annex's source
 tree, run "stack build" to download and
