@@ -12,6 +12,11 @@ git-annex (7.20190709) UNRELEASED; urgency=medium
     drive. Now supports CoW between BTRFS subvolumes. And, falls back to rsync
     instead of using cp when CoW won't work, eg copies between repos on the
     same EXT4 filesystem.
+  * Windows build no longer ships with a copy of rsync, since that is only
+    used any more to access rsync special remotes or remotes with a very
+    old version of git-annex-shell.
+  * Windows build is now 64 bit, and using it with the 64 bit git for
+    Windows is fully supported.
 
  -- Joey Hess <id@joeyh.name>  Mon, 08 Jul 2019 08:59:54 -0400
 
